Fått opp løsningen med DotNetCore 3.0

--- a/Globomantics/Views/Loan/Confirmation.cshtml
+++ b/Globomantics/Views/Loan/Confirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoanApplication
+﻿@*@model LoanApplication
 
 @section Banner {
     <div class="jumbotron jumbotron-fluid jumbotron-blue">
@@ -108,4 +108,4 @@
 
 <div class="form-group">
     <button class="btn btn-primary float-right">Confirm & Submit</button>
-</div>
+</div>*@
