--- a/Globomantics/Views/Auto/Quote.cshtml
+++ b/Globomantics/Views/Auto/Quote.cshtml
@@ -33,7 +33,7 @@
     <div class="form-group">
         <label asp-for="Price">Purchase Price</label>
         <input asp-for="Price" type="text" class="form-control" placeholder="Price">
-        <span asp-validation-for="Year" class="error"></span>
+        <span asp-validation-for="Price" class="error"></span>
     </div>
     <div class="form-group">
         <label asp-for="Type">Vehicle Type</label>
@@ -46,9 +46,9 @@
         </select>
     </div>
 
-    @Html.Partial("Person")
+    @*@Html.Partial("Person")*@
 
     <div class="form-group">
-        <button class="btn btn-primary float-right">Submit</button>
+        <button class="btn btn-primary float-right">Send inn</button>
     </div>
 </form>
