--- a/Globomantics/Views/Shared/Person.cshtml
+++ b/Globomantics/Views/Shared/Person.cshtml
@@ -13,6 +13,8 @@
 <div class="form-group">
     <label for="exampleFormControlInput1">Date of Birth</label>
     <input asp-for="Dob" type="text" class="form-control" placeholder="Date of Birth">
+    <span asp-validation-for="Dob" class="text-danger"></span>
+
 </div>
 <div class="form-group">
     <label for="exampleFormControlInput1">Email</label>
